Integrated working javascript terminal Added codemirror renderer (HTML).